--- a/week6/assets/styles/grid1.css
+++ b/week6/assets/styles/grid1.css
@@ -1,20 +1,9 @@
-.container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 100px 200px 100px 100px 150px;
-    text-align: center;
-    font-family: 'Arial Narrow', Arial, sans-serif;
-    font-style: normal;
-    font-weight: 200;
-    font-size: 2em;
-
-}
-
 header {
     grid-row: 1 / 2;
     grid-column: 1 / 4;
     background-color: grey;
     padding-top: 20px;
+
 }
 
 .aside {
@@ -35,8 +24,7 @@ main article {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: bisque;
-    padding: 10px;
+    background-color: bisque
 }
 
 .upper {
@@ -68,48 +56,81 @@ main article {
     grid-row: 4 / 5;
     grid-column: 1 / 3;
     background-color: rgb(127, 80, 24);
-    margin: 10px;
+    margin: 10px
 }
 
-footer {
-    display: grid;
-    grid-row: 5 / 6;
-    grid-column: 1 / 4;
-    align-content: stretch;
 
-    background-color: grey;
-    padding: 20px;
-    gap: 10px;
 
-}
 
-footer section {
-    background-color: bisque;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-.part1 {
 
-    grid-column-start: 1;
+@media screen and (min-width: 280px) {
+    footer {
+        display: grid;
+        grid-row: 5 / 6;
+        grid-column: 1 / 4;
+        align-content: stretch;
 
-}
+        background-color: grey;
+        padding: 20px;
+        gap: 10px;
+    }
 
-.part2 {
+    footer section {
+        background-color: bisque;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
-    grid-column-start: 2;
+    .part1 {
 
-}
+        grid-column-start: 1;
 
-.part3 {
+    }
 
-    grid-column-start: 3;
+    .part2 {
 
-}
+        grid-column-start: 2;
 
-.part4 {
+    }
 
-    grid-column-start: 4;
+    .part3 {
 
+        grid-column-start: 3;
+
+    }
+
+    .part4 {
+
+        grid-column-start: 4;
+
+    }
+
+
+    .container {
+        display: grid;
+        height: 49vw;
+        width: 100vw;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 20% 40% 10% 10% 20%;
+        text-align: center;
+        font-family: 'Arial Narrow', Arial, sans-serif;
+        font-style: normal;
+        font-size: 1em;
+
+
+    }
+
+    @media screen and (max-width: 450px) {
+
+
+        footer section {
+            display: none;
+        }
+
+        footer {
+            display: none;
+        }
+    }
 }
