--- a/week6/assets/styles/grid2.css
+++ b/week6/assets/styles/grid2.css
@@ -75,3 +75,75 @@
     grid-area: part4;
     background-color: gray
 }
+
+@media screen and (min-width: 280px) {
+    footer {
+        display: grid;
+        grid-row: 5 / 6;
+        grid-column: 1 / 4;
+        align-content: stretch;
+
+        background-color: grey;
+        padding: 20px;
+        gap: 10px;
+    }
+
+    footer section {
+        background-color: bisque;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .part1 {
+
+        grid-column-start: 1;
+
+    }
+
+    .part2 {
+
+        grid-column-start: 2;
+
+    }
+
+    .part3 {
+
+        grid-column-start: 3;
+
+    }
+
+    .part4 {
+
+        grid-column-start: 4;
+
+    }
+
+
+    .container {
+        display: grid;
+        height: 49vw;
+        width: 100vw;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 20% 40% 10% 10% 20%;
+        text-align: center;
+        font-family: 'Arial Narrow', Arial, sans-serif;
+        font-style: normal;
+        font-size: 1em;
+
+
+    }
+
+    @media screen and (max-width: 450px) {
+
+
+        footer section {
+            display: none;
+        }
+
+        .footer {
+            display: none;
+        }
+    }
+}
