--- a/project-3-test/assets/styles/startico2.scss
+++ b/project-3-test/assets/styles/startico2.scss
@@ -1,3 +1,5 @@
+@import "mixins";
+
 $pistachio: #DDF0A7;
 $small-text: "Space Grotesk";
 $mainblack: #162E3C;
@@ -47,6 +49,8 @@ body {
 
 .page1 {
     background-color: $mainblack;
+    display: flex;
+    flex-flow: column;
 }
 
 .header {
@@ -60,7 +64,7 @@ body {
         flex-flow: column;
         align-items: center;
 
-        @media screen and (min-width: $screen-medium) {
+        @include media-breakpoint-up($grid-breakpoint-md) {
             flex-flow: row;
             padding-bottom: 0;
         }
@@ -68,7 +72,7 @@ body {
         & .header__container__spacer {
             display: none;
 
-            @media screen and (min-width: $screen-medium) {
+            @include media-breakpoint-up($grid-breakpoint-md) {
                 display: block;
                 flex-grow: 1;
             }
@@ -78,7 +82,7 @@ body {
         & .header__container__item {
             text-decoration: none;
 
-            @media screen and (min-width: $screen-medium) {
+            @include media-breakpoint-up($grid-breakpoint-md) {
                 margin-top: 1rem;
                 margin-bottom: 1rem;
             }
@@ -94,7 +98,7 @@ body {
             white-space: nowrap;
             color: $mainblack;
 
-            @media screen and (min-width: $screen-medium) {
+            @include media-breakpoint-up($grid-breakpoint-md) {
                 margin-right: 1.5rem;
 
                 &:last-child {
@@ -113,6 +117,139 @@ body {
                     color: white;
                 }
             }
+        }
+    }
+}
+
+.heading {
+    background: url(../screen1-bg.svg) no-repeat top center;
+    background-size: contain;
+    flex-grow: 1;
+    width: 100%;
+    max-width: $container-max-width;
+    margin: 0 auto;
+    padding-bottom: 25vw;
+    display: flex;
+    align-items: center;
+
+    @include media-breakpoint-up($grid-breakpoint-md) {
+        padding-bottom: 20vw;
+    }
+
+    & .heading-content {
+        width: 50vw;
+        max-width: 500px;
+        margin: 0 auto;
+        color: $white;
+        text-align: center;
+        padding: 3rem 0;
+
+        @include media-breakpoint-up($grid-breakpoint-md) {
+            padding: 6rem 0;
+        }
+
+        & .heading-content__header {
+            font-family: 'frauncesblack';
+        }
+
+        & .heading-content__actions {
+            padding: 1rem 0;
+
+            & .btn {
+                border: 1px solid $mainblack;
+                border-radius: 20px;
+                padding: 0.5rem;
+                margin: 0.5rem 1rem;
+                text-decoration: none;
+                white-space: nowrap;
+                display: inline-block;
+
+
+                &.btn-pistachio {
+                    background-color: $pistachio;
+                    color: $mainblack;
+                }
+
+                &.btn-arrow {
+                    background: url(../arrow-right.svg) center right no-repeat;
+                    padding-right: 1.5rem;
+                    color: $white;
+                }
+            }
+        }
+
+        & .heading-content__logo {
+            padding: 2rem 0 0 0;
+        }
+
+        & .heading-content__logo-item {
+            height: 25px;
+            padding: 0 5px;
+        }
+
+    }
+}
+
+
+.video {
+    padding-bottom: 3rem;
+    position: relative;
+
+    margin-top: -25vw;
+
+    @include media-breakpoint-up($grid-breakpoint-md) {
+        margin-top: -20vw;
+    }
+
+
+    & .video-pane {
+        background-color: $mainblack;
+        height: 25vw;
+
+        @include media-breakpoint-up($grid-breakpoint-md) {
+            height: 20vw;
+        }
+    }
+
+    & .video-handler {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding-bottom: 3rem;
+
+    }
+
+    & .video-background {
+        background: url(../foto-girl.png) no-repeat center center;
+        width: 100%;
+        background-size: contain;
+        width: 100vw;
+        height: 50vw;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        @include media-breakpoint-up($grid-breakpoint-md) {
+            width: 80vw;
+            height: 40vw;
+        }
+
+        & .video-button {
+            &.btn {
+                border: 1px solid $mainblack;
+                border-radius: 20px;
+                padding: 0.5rem;
+                margin: 0 1rem;
+                text-decoration: none;
+
+                &.btn-pistachio {
+                    background-color: $pistachio;
+                    color: $mainblack;
+                }
+            }
+
         }
     }
 }
