--- a/project-3-test/assets/styles/startico2.css
+++ b/project-3-test/assets/styles/startico2.css
@@ -158,10 +158,12 @@ body {
   padding-bottom: 3rem;
   position: relative;
   margin-top: -25vw;
+  margin-bottom: 25vw;
 }
 @media (min-width: 768px) {
   .video {
     margin-top: -20vw;
+    margin-bottom: 20vw;
   }
 }
 .video .video-pane {
