--- a/project-3-test/assets/styles/startico2.scss
+++ b/project-3-test/assets/styles/startico2.scss
@@ -196,9 +196,11 @@ body {
     position: relative;
 
     margin-top: -25vw;
+    margin-bottom: 25vw;
 
     @include media-breakpoint-up($grid-breakpoint-md) {
         margin-top: -20vw;
+        margin-bottom: 20vw;
     }
 
 
