--- a/gymnastics/assets/styles/index.scss
+++ b/gymnastics/assets/styles/index.scss
@@ -198,6 +198,7 @@ body {
 
     @media screen and (max-width: $grid-breakpoint-md) {
         margin-bottom: 4em;
+
     }
 
 }
@@ -216,7 +217,7 @@ body {
             display: grid;
             grid-template-columns: 1fr 1fr;
             grid-template-rows: 1fr;
-            font-size: 20px;
+            font-size: 1em;
             justify-items: flex-end;
 
             @media screen and (max-width: $grid-breakpoint-md) {
@@ -476,7 +477,7 @@ body {
     // .prices__timetable
 
     &__timetable {
-        margin: 2em auto;
+        margin: 4em auto;
 
 
 
@@ -568,7 +569,7 @@ td {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
-        background-image: url(../images/Rectangle4.svg);
+        background-image: url(../images/rectangle.svg);
         background-position: right top;
         background-size: cover;
         background-repeat: no-repeat;
@@ -782,6 +783,12 @@ td {
 //GROUPS//
 .groups__container {
     text-align: center;
+
+    @media screen and (max-width: $grid-breakpoint-md) {
+
+        margin-bottom: -7em;
+
+    }
 }
 
 .questions {
