--- a/gymnastics/assets/styles/index.css
+++ b/gymnastics/assets/styles/index.css
@@ -183,7 +183,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
-  font-size: 20px;
+  font-size: 1em;
 }
 @media screen and (max-width: 768px) {
   .start__container_training {
