--- a/gymnastics/assets/styles/index.css
+++ b/gymnastics/assets/styles/index.css
@@ -4,6 +4,7 @@ html {
 
 body {
   font-family: "Manrope", Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 .header__container {
@@ -141,6 +142,7 @@ body {
     display: block;
     background: linear-gradient(white, #FF86F4, #966EF7);
     padding-top: 10em;
+    border-radius: 20px;
   }
 }
 
@@ -627,4 +629,36 @@ td {
 .footer__container_social,
 .footer__container a {
   padding: 10px;
+}
+
+.moveingball {
+  margin: 0 auto;
+  grid-column: 1/3;
+  -webkit-animation-name: my-animation;
+          animation-name: my-animation;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+  overflow: hidden;
+}
+
+@-webkit-keyframes my-animation {
+  0% {
+    margin-left: 0%;
+  }
+  100% {
+    margin-left: 100%;
+  }
+}
+
+@keyframes my-animation {
+  0% {
+    margin-left: 0%;
+  }
+  100% {
+    margin-left: 100%;
+  }
 }/*# sourceMappingURL=index.css.map */
