--- a/gymnastics/assets/styles/index.scss
+++ b/gymnastics/assets/styles/index.scss
@@ -15,6 +15,7 @@ html {
 
 body {
     font-family: $mainfont;
+    overflow-x: hidden;
 
 }
 
@@ -183,6 +184,7 @@ body {
         display: block;
         background: linear-gradient(white, $pink, $violet);
         padding-top: 10em;
+        border-radius: 20px;
     }
 
 }
@@ -856,4 +858,28 @@ td {
 
         }
     }
+}
+
+
+
+
+.moveingball {
+    margin: 0 auto;
+    grid-column: 1/3;
+    animation-name: my-animation;
+    animation-iteration-count: infinite;
+    animation-duration: 3s;
+    animation-delay: 1s;
+    overflow: hidden;
+}
+
+@keyframes my-animation {
+    0% {
+        margin-left: 0%;
+    }
+
+    100% {
+        margin-left: 100%;
+    }
+
 }
