--- a/scratch/assets/styles/index.css
+++ b/scratch/assets/styles/index.css
@@ -129,3 +129,13 @@
 .hand1 {
     animation-delay: 5ms;
 }
+
+#thanksdiv {
+    position: absolute;
+    margin-top: 70px;
+    align-self: center;
+    font-size: 3em;
+    color: red;
+    font-weight: 600;
+
+}
